--- a/simonakamenova-frontend/src/css/App.css
+++ b/simonakamenova-frontend/src/css/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  background-image: url('moni-manikur.jpg');;
+  background-image: url('images/moni-manikur.jpg');
 }
 
 /* Контейнер за цялото приложение */
